--- a/src/Brainf_ckSharp.Uwp/Controls/Host/InputPanel/Header/StdinHeader.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/InputPanel/Header/StdinHeader.xaml
@@ -81,9 +81,7 @@
             VerticalAlignment="Stretch"
             VerticalContentAlignment="Center"
             x:Name="StdinBox"
-            CharacterReceived="StdinBox_OnCharacterReceived"
-            GotFocus="StdinBox_OnGotFocus"
-            LostFocus="StdinBox_OnLostFocus">
+            CharacterReceived="StdinBox_OnCharacterReceived">
 
             <!--Default brushes overrides-->
             <TextBox.Resources>
