--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPageTemplates.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPageTemplates.xaml
@@ -2,12 +2,12 @@
     x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Views.IdeResultSubPageTemplates"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:views="using:Brainf_ckSharp.Uwp.Models.Ide.Views"
     xmlns:models="using:Brainf_ckSharp.Models"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:convertersConsole="using:Brainf_ckSharp.Uwp.Converters.Console"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    xmlns:system="using:System">
+    xmlns:system="using:System"
+    xmlns:views="using:Brainf_ckSharp.Shared.Models.Ide.Views">
 
     <!--Exception type template-->
     <DataTemplate
