--- a/src/Brainf_ckSharp.Uwp/Views/ConsoleView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/ConsoleView.xaml
@@ -5,10 +5,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:templateSelectors="using:Brainf_ckSharp.Uwp.TemplateSelectors"
-    xmlns:console="using:Brainf_ckSharp.Uwp.Models.Console"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:convertersConsole="using:Brainf_ckSharp.Uwp.Converters.Console"
     xmlns:views="using:Brainf_ckSharp.Uwp.ViewModels.Views"
+    xmlns:console="using:Brainf_ckSharp.Shared.Models.Console"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
