--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
@@ -14,8 +14,8 @@
     xmlns:memoryViewer="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.MemoryViewer"
     xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
-    xmlns:viewModels="using:Brainf_ckSharp.Uwp.ViewModels"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
+    xmlns:viewModels="using:Brainf_ckSharp.Shared.ViewModels"
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="400">
