--- a/src/Brainf_ckSharp.Uwp/Views/ConsoleView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/ConsoleView.xaml
@@ -7,8 +7,8 @@
     xmlns:templateSelectors="using:Brainf_ckSharp.Uwp.TemplateSelectors"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:convertersConsole="using:Brainf_ckSharp.Uwp.Converters.Console"
-    xmlns:views="using:Brainf_ckSharp.Uwp.ViewModels.Views"
     xmlns:console="using:Brainf_ckSharp.Shared.Models.Console"
+    xmlns:views="using:Brainf_ckSharp.Shared.ViewModels.Views"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
