--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/AboutSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/AboutSubPage.xaml
@@ -47,7 +47,7 @@
                     Margin="0,12,0,0">
                         <Run Text="Build:" FontWeight="SemiBold" FontSize="14"/>
                         <Run 
-                            Text="{x:Bind helpers:SystemInformation.ApplicationVersion}"
+                            Text="{x:Bind helpers:PackageVersionHelper.ToFormattedString(helpers:SystemInformation.ApplicationVersion)}"
                             FontSize="15" FontWeight="SemiBold" FontFamily="Consolas"/>
                         <Run Text="|"/>
                         <Run 
