--- a/src/Brainf_ckSharp.Uwp/Controls/Host/InputPanel/CompactMemoryViewer.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/InputPanel/CompactMemoryViewer.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.Uwp.Controls.Host.InputPanel.MemoryViewer.CompactMemoryViewer"
+    x:Class="Brainf_ckSharp.Uwp.Controls.Host.InputPanel.CompactMemoryViewer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
