--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
@@ -11,11 +11,11 @@
     xmlns:shellHeader="using:Brainf_ckSharp.Uwp.Controls.Host.Header"
     xmlns:inputPanelHeader="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.Header"
     xmlns:virtualKeyboard="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.VirtualKeyboard"
-    xmlns:memoryViewer="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel.MemoryViewer"
     xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
     xmlns:viewModels="using:Brainf_ckSharp.Shared.ViewModels"
+    xmlns:inputPanel="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel"
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="400">
@@ -106,7 +106,7 @@
                             <virtualKeyboard:OperatorsKeyboard/>
                         </PivotItem>
                         <PivotItem>
-                            <memoryViewer:CompactMemoryViewer/>
+                            <inputPanel:CompactMemoryViewer/>
                         </PivotItem>
                     </controls:LockedPivot>
                 </telerik:ExpanderControl.ExpandableContent>
