--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -15,7 +15,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
     <UserControl.DataContext>
-        <subPages:SettingsViewModel x:Name="ViewModel"/>
+        <subPages:SettingsSubPageViewModel x:Name="ViewModel"/>
     </UserControl.DataContext>
     <UserControl.Resources>
 
