--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -13,6 +13,7 @@
     xmlns:models="using:Brainf_ckSharp.Shared.Models"
     xmlns:markupExtensions="using:Brainf_ckSharp.Uwp.MarkupExtensions"
     xmlns:enums="using:Brainf_ckSharp.Uwp.Controls.Ide.Enums"
+    xmlns:settings="using:Brainf_ckSharp.Shared.Enums.Settings"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters.SubPages.Settings"
     mc:Ignorable="d"
     d:DesignHeight="300"
@@ -84,29 +85,46 @@
         </DataTemplate>
 
         <!--UI settings template-->
-        <DataTemplate x:Name="UISettingsTemplate">
-            <Border Background="Transparent">
-                <Grid ColumnSpacing="12">
+        <DataTemplate
+            x:Name="UISettingsTemplate"
+            x:DataType="models:SettingsViewModelWithSectionInfo">
+            <StackPanel Spacing="4">
+
+                <!--Starting page-->
+                <TextBlock
+                    TextWrapping="Wrap"
+                    Text="Starting page"/>
+                <ComboBox
+                    CornerRadius="0"
+                    Margin="0,4,0,0"
+                    MinWidth="140"
+                    ItemsSource="{markupExtensions:EnumValues Type=settings:ViewType}"
+                    SelectedItem="{x:Bind ViewModel.StartingView, Mode=OneWay}"
+                    SelectionChanged="StartingView_SelectedItemChanged"/>
+
+                <!--Show PBrain operators-->
+                <TextBlock
+                    Margin="0,8,0,0"
+                    TextWrapping="Wrap"
+                    Text="Show PBrain operators"/>
+                <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="48"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock
-                        Style="{StaticResource FontIconTextBlockStyle}"
-                        Text="{StaticResource RecentSectionIcon}"
-                        FontSize="20"
-                        Foreground="{ThemeResource SystemControlHighlightAccentBrush}"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"/>
-                    <TextBlock
+                    <ToggleSwitch IsOn="{x:Bind ViewModel.ShowPBrainButtons, Mode=TwoWay}"/>
+                    <HyperlinkButton 
+                        Margin="0,0,20,0"
+                        HorizontalAlignment="Right"
                         Grid.Column="1"
-                        TextWrapping="Wrap"
-                        FontSize="14"
-                        Foreground="#FFE0E0E0">
-                        <Run Text="Tap here to pick and open a file!"/>
-                    </TextBlock>
+                        Click="ShowPBrainButtonsInfo_Clicked">
+                        <TextBlock>
+                            <Run Text="&#xEC26;" FontFamily="Segoe MDL2 Assets"/>
+                            <Run Text="What's this?"/>
+                        </TextBlock>
+                    </HyperlinkButton>
                 </Grid>
-            </Border>
+            </StackPanel>
         </DataTemplate>
 
         <!--Interpreter settings template-->
